--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,30 @@ body {
     font-family: "Rubik Mono One";
 }
 
-/*section*/
+/*header*/
+ul {
+    list-style-type: none;
+}  
+
+.fixed {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+}
+
+li {
+    display: inline-block; 
+    padding: 30px;
+    font-size: 30px;
+    width: 17px;
+    height: 17px;
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 50%;
+    margin-left: 50px;
+}
+
+/*main*/
 section {
     position: relative;
     width: 100%;
@@ -33,6 +56,7 @@ h2 {
 
 #rosso {
     background-color: red;
+    
 }
 
 #verde {
@@ -46,3 +70,5 @@ h2 {
 span {
     color: green;
 }
+
+/*fine main*/
